--- a/libbeat/docs/processors-using.asciidoc
+++ b/libbeat/docs/processors-using.asciidoc
@@ -196,10 +196,13 @@ The supported processors are:
 
  * <<add-cloud-metadata,`add_cloud_metadata`>>
  * <<add-docker-metadata,`add_docker_metadata`>>
+ * <<add-fields, `add_fields`>>
  * <<add-host-metadata,`add_host_metadata`>>
  * <<add-kubernetes-metadata,`add_kubernetes_metadata`>>
+ * <<add-labels, `add_labels`>>
  * <<add-locale,`add_locale`>>
  * <<add-process-metadata,`add_process_metadata`>>
+ * <<add-tags, `add_tags`>>
  * <<community-id,`community_id`>>
  * <<decode-json-fields,`decode_json_fields`>>
  * <<dissect, `dissect`>>
@@ -624,6 +627,90 @@ _Openstack Nova_
 }
 -------------------------------------------------------------------------------
 
+[[add-fields]]
+=== Add fields
+
+The `add_fields` processor adds additional fields to the event.  Fields can be
+scalar values, arrays, dictionaries, or any nested combination of these.  By
+default the fields that you specifiy will be grouped under the `fields`
+sub-dictionary in the event.  The `target` setting can be used to change the
+sub-dictionary used for grouping the new fields under.  To store the fields as
+top-level fields, set `target: ''`. 
+
+``target``:: (Optional) Sub-dictionary to put all fields in to. Defaults to `fields`.
+``fields``:: Fields to be added:
+
+Example:
+
+This configuration:
+
+[source,yaml]
+------------------------------------------------------------------------------
+processors:
+- add_fields:
+    target: project
+    fields:
+      name: myproject
+      id: '574734885120952459'
+------------------------------------------------------------------------------
+
+Adds these fields to any event:
+
+[source,json]
+-------------------------------------------------------------------------------
+{
+  "project": {
+    "name": "myproject",
+    "id": "574734885120952459"
+  }
+}
+-------------------------------------------------------------------------------
+
+
+[[add-labels]]
+=== Add labels
+
+The `add_labels` processors adds a set of key-value pairs to an event.
+The processor will flatten nested configuration objects like arrays or
+dictionaries into a fully qualified name by merging nested names with a `.`.
+Array entries create numeric names starting with 0.  Labels are always stored
+under the ECS compliant `labels` sub-dictionary.
+
+`labels`:: dictionaries of labels to be added.
+
+Example:
+
+[source,yaml]
+------------------------------------------------------------------------------
+processors:
+- add_labels:
+    labels:
+      number: 1
+      label.with.dots: test
+      nested:
+        label.with.dots: nested
+      array:
+        - do
+	- re
+	- with.field: mi
+------------------------------------------------------------------------------
+
+Adds these fields to every event:
+
+[source,json]
+-------------------------------------------------------------------------------
+{
+  "labels": {
+    "number": 1,
+    "label.with.dots": "test",
+    "nested.label.with.dots": "nested",
+    "array.0": "do",
+    "array.1": "re",
+    "array.2.with.field": "mi"
+  }
+}
+-------------------------------------------------------------------------------
+
 
 [[add-locale]]
 === Add the local time zone
@@ -656,6 +743,14 @@ NOTE: Please note that `add_locale` differentiates between daylight savings
 time (DST) and regular time. For example `CEST` indicates DST and and `CET` is
 regular time.
 
+[[add-tags]]
+=== Add tags
+
+The `add_tags` processor adds tags to an list of tags. The tags will be
+appended to the existing list of tags, if the target field already exists.
+
+`tags`:: List of tags to add
+`target`:: (Optional) Field the tags will be added to. Defaults to `tags`.
 
 [[decode-json-fields]]
 === Decode JSON fields
